--- a/TODO.txt
+++ b/TODO.txt
@@ -2,3 +2,9 @@
 -- DONE: Log how long the internet works for.
 -- TODO: Detect the lost packets.
 -- TODO: Add a tray notification.
+-- TODO: Make a keypress like Ctrl-D end the program.
+-- TODO: Add flags.
+-- DONE: Make it unbuffered so that piping to `tee` works.
+-- TODO: Make sure running multiple instances will not interfere.
+-- TODO: Daemonize.
+-- TODO: Get rid of excessive global variables.
